# GRA-Aging-Reset

./: CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  GRA-Aging-Reset.rar  License.txt  README.md  gra obnulenka.txt  pyproject.toml  references.bib
biology/: 01_epigenetic_information_theory.md  02_epigenetic_clocks_survey.md  03_senescence_senolytics.md  04_systemic_signals_hormones_immune.md
code/: epigenetic_clock_tools.md  links_epigenetic_clock_repos.md
meta/: 01_risks_ethics.md  02_roadmap_2030_2050.md
paper/: main.tex  references.bib
practical/: 01_strategy_overview.md  02_lifestyle_protocol.md  03_drug_supplement_landscape.md  04_experimental_roadmap_lab.md
theory/: 01_GRA_multilevel_formalism.md  02_GRA_applied_to_aging.md  03_Musk_Sinclair_link.md
